--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,11 +22,11 @@
 
 
 # PostgreSQL Configuration
-# postgresql://quizdb_31vn_user:hfNfYSVNOL2DhUOc1RSg13WJWQ3ljfwo@dpg-d47frkchg0os73flfu60-a.singapore-postgres.render.com/quizdb_31vn
+# postgresql://quiz_9bd8_user:zIopoIv7CC8U8Tc5pt7VuSg6QzNbOyiT@dpg-d47h9d3ipnbc73csgrc0-a.singapore-postgres.render.com/quiz_9bd8
 
-spring.datasource.url=jdbc:postgresql://dpg-d47frkchg0os73flfu60-a.singapore-postgres.render.com/quizdb_31vn
-spring.datasource.username=quizdb_31vn_user
-spring.datasource.password=hfNfYSVNOL2DhUOc1RSg13WJWQ3ljfwo
+spring.datasource.url=jdbc:postgresql://dpg-d47h9d3ipnbc73csgrc0-a.singapore-postgres.render.com/quiz_9bd8
+spring.datasource.username=quiz_9bd8_user
+spring.datasource.password=zIopoIv7CC8U8Tc5pt7VuSg6QzNbOyiT
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
